DigIt CHANGE LOG
======================

2025/02/
        24 LoadSaveWork in separate methods;
	   Captured Files Toolbar placed above the list horizontally;
	   Eliminated redundant Session Saves;
        21 Added Captured Toolbar Actions Enabled; 
           Added Captured Toolbar Delete/DeleteAll; 
        20 UI Adjustments; Load/SaveWork Dialog=mrNo delete the xml and thumbs file
        07 Added Linux Project (Gtk2);
	   GUI Adjustments for Gtk2 support;
2024/12/
        20 Use of CapturedFiles Array;
	   Deleted OwnerDraw in lvCaptured;
	   Use of ImageList Add/InsertProportionally for Thumbnails;
	   Load/Save Thumbnails from a file;
	   Adjustments in GoBack/SaveCallback indexes;
	   Updated Folder Source;
	   Updated Twain Source to use Download;
	   Updated Twain 32bit Server to use Download;

        12 First Porting of Source_Twain to new interfaces structure;
	   Added Drivers file for WSD Scanners;
        06 Commented Destinations (until I think how);
	   Deleted all code with my allocation of PChars in the interfaces;
	   Added Value_Next in Counter and use it in MainForm;
	   Cleaning residual code;
	   UI adjustments due to longer Italian words.
        05 Use resourcestring for Languages support; Some UI adjustments
        04 Added PDF Export
        02 Moved Select of Source/Destination from MainForm to Bridge Implementation;
	   Deleted our creation of strings in Bridge (callers create the PChar);
	   Modified Params of UI_Title const to out;
	   First PDF write tests;

2024/11/
        29 Added Source and Destination properties to Main Form;
	   Writed BuildDuplex Wizard.
        27 Changed the SourceFiles array to Record TSourceFile (added the Crop field);
	   Added CropGoNext (without Cropping), ClearQueue, BuildDuplex  actions;
	   Writed TakeAgain action;
	   Check of put it in the middle Crop (to write);
	   Adjustments in Custom Crop logic;
	   Added BuildDuplex  Wizard (to write).