@@ -7,10 +7,11 @@ uses
   cthreads,
   {$ENDIF}{$ENDIF}
   Interfaces, // this includes the LCL widgetset
-  LCLVersion, DefaultTranslator, LCLTranslator,
-  Forms, lazcontrols, DigIt_Bridge_Intf, DigIt_Bridge_Impl, DigIt_Types, DigIt_Counters, DigIt_Utils,
-  DigIt_Form_Main, DigIt_Form_Templates,
-  DigIt_Sources, DigIt_Destinations, DigIt_Form_Progress, DigIt_Form_BuildDuplex, DigIt_Source_WIA, Digit_Source_Folder;
+  LCLVersion, DefaultTranslator, LCLTranslator, Forms, lazcontrols,
+  DigIt_Bridge_Intf, DigIt_Bridge_Impl, DigIt_Types, DigIt_Counters,
+  DigIt_Utils, DigIt_Form_Main, DigIt_Form_Templates, DigIt_Sources,
+  DigIt_Destinations, DigIt_Form_Progress, DigIt_Form_BuildDuplex,
+  DigIt_Source_WIA, Digit_Source_Folder, Digit_Source_Twain;
 
 {$R *.res}
 
